--- a/code/app/src/main/res/navigation/nav_graph_admin.xml
+++ b/code/app/src/main/res/navigation/nav_graph_admin.xml
@@ -86,6 +86,9 @@
         <action
             android:id="@+id/action_smobAdminGroupMembersListFragment_to_smobAdminGroupMembersEditFragment"
             app:destination="@id/smobAdminGroupMembersEditFragment" />
+        <action
+            android:id="@+id/action_smobAdminGroupMembersListFragment_to_smobAdminGroupMemberDetailsFragment"
+            app:destination="@id/smobAdminGroupMemberDetailsFragment" />
     </fragment>
 
     <fragment
@@ -99,6 +102,15 @@
             app:destination="@id/smobAdminGroupMembersListFragment" />
     </fragment>
 
+    <fragment
+        android:id="@+id/smobAdminGroupMemberDetailsFragment"
+        android:name="com.tanfra.shopmob.smob.ui.admin.groupMembers.AdminGroupMemberDetailsFragment"
+        android:label="Group Member Details"
+        tools:layout="@layout/fragment_admin_group_member_details">
+        <action
+            android:id="@+id/action_smobAdminGroupMemberDetailsFragment_to_smobAdminGroupMembersListFragment"
+            app:destination="@id/smobAdminGroupMembersListFragment" />
+    </fragment>
 
     <fragment
         android:id="@+id/smobAdminListsFragment"
